# crewai

./: .gitignore  analysis_report.md  collaboration_opportunities.md  hypotheses.md  pyproject.toml
src/scires/: crew.py  main.py
src/scires/config/: agents.yaml  tasks.yaml
