[project]
name = "scires"
version = "0.1.0"
description = "scires using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
scires = "scires.main:run"
run_crew = "scires.main:run"
train = "scires.main:train"
replay = "scires.main:replay"
test = "scires.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
